# media-janitor

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  media-janitor.xml  pyproject.toml
.github/workflows/: docker-publish.yml
src/media_janitor/: __init__.py  arr_client.py  config.py  janitor.py  main.py  notifications.py  plex_auth.py  plex_client.py  reports.py  scanner.py  state.py  validation.py  web_ui.py  webhook.py
src/media_janitor/templates/: base.html  dashboard.html  library.html  logs.html  reports.html  settings.html
templates/: media-janitor.xml
unraid/: media-janitor.xml
